--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,42 @@
-//
+// Fonts
+@import url("https://fonts.googleapis.com/css?family=Nunito");
+
+// Variables
+@import "variables";
+
+// Bootstrap
+@import "~bootstrap/scss/bootstrap";
+
+// Font-awesome
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+
+body {
+    background-color: #f5f5f5;
+}
+
+.card-header {
+    background: #fff;
+    padding-top: 16px;
+    padding-bottom: 10px;
+}
+
+.card-footer {
+    font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.01);
+}
+
+.table,
+.pagination {
+    margin-bottom: 0;
+}
+
+.sort-control {
+    cursor: pointer;
+}
+.ascending:after {
+    content: "\25b2";
+}
+.descending:after {
+    content: "\25bc";
+}
